styles on views

--- a/encoder/src/locales/translation-es-AR.json
+++ b/encoder/src/locales/translation-es-AR.json
@@ -1,15 +1,15 @@
 {
   "title" : "decodificador",
 
-  "first_step_title": "Bienvenido",
+  "first_step_title": "bienvenido",
   "second_step_title": "nombre",
-  "third_step_title": "correo electronico",
-  "four_step_title": "fotografia",
+  "third_step_title": "correo electrónico",
+  "four_step_title": "fotografía",
   "five_step_title": "listo",
 
   "first_content": "este es el decodificador",
-  "name_instruction": "por favor ingresá su nombre",
-  "email_instruction": "por favor ingresá su email",
+  "name_instruction": "ingresá su nombre",
+  "email_instruction": "ingresá su email",
   "picture_instruction": "voy a tomar una fotografia ",
 
   "instructions": "usá las flechas en el teclado",
