--- a/encoder/src/locales/translation-en-US.json
+++ b/encoder/src/locales/translation-en-US.json
@@ -14,6 +14,11 @@
 
   "instructions": "use your arrow key",
 
+  "next": "next",
+  "previous": "previous",
+  "loading": "loading",
+  "finish": "finish",
+
   "email_subject": "Your codified portrait",
   "email_hello": "Hello",
   "email_body": "Attached you can find your portrait",
