--- a/encoder/src/locales/translation-es-CO.json
+++ b/encoder/src/locales/translation-es-CO.json
@@ -14,6 +14,11 @@
 
   "instructions": "use sus flechas en el teclado",
 
+  "next": "siguiente",
+  "previous": "anterior",
+  "loading": "cargando",
+  "finish": "terminar",
+
   "email_subject": "Su retrato codificado",
   "email_hello": "Hola",
   "email_body": "Su retrato esta adjunto",
